# Volsung

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Readme.md  Yggdrasil  Yggdrasil.cpp  cmake_install.cmake  new_objects  new_ojects_and_procedures  syntax_ideas  todo  todo.md
docs/: Doxyfile
extra/Player/: AudioPlayer_Interface.hh  AudioPlayer_Linux.hh  AudioPlayer_Macos.cc  AudioPlayer_Macos.hh  AudioPlayer_Windows.hh  AudioPlayer_Windows_dsound.hh  AudioPlayer_Windows_float.hh  VlsngPlayer.cc
extra/language-volsung/: package.json
extra/language-volsung/grammars/: volsung.cson
extra/language-volsung/settings/: language-volsung.cson
extra/runner/: linux.hh  runner.cc  runner.hh
extra/standard_library/: audio_effects.vlsng  conversions.vlsng  list_processing.vlsng  theory.vlsng  utilities.vlsng
extra/syntax_highlighting/: volsung.el  volsung.vim
extra/syntax_highlighting/language-volsung/snippets/: language-volsung.cson
extra/syntax_highlighting/language-volsung/spec/: language-volsung-spec.coffee
include/: AudioDataflow.hh  AudioObject.hh  Graph.hh  Objects.hh  Parser.hh  Volsung.hh  VolsungCore.hh  YggdrasilCore.h
src/: AddObject.cpp  AddObject.h  AudioDataflow.cc  AudioDataflow.cpp  AudioDataflow.h  AudioObject.cc  AudioObject.cpp  AudioObject.h  BitcrushObject.cpp  Block.cpp  Block.h  FileoutObject.cpp  FileoutObject.h  FilterObject.cpp  Graph.cc  Graph.cpp  Graph.h  LFOObject.cpp  LFOObject.h  Makefile  Objects.cc  Objects.cpp  Objects.h  OscillatorObject.cpp  OscillatorObject.h  Parser.cc  Parser.cpp  Parser.h  PassObject.cpp  Patch.cpp  Patch.h  Rumpetroll.cpp  Rumpetroll.h  SawtoothOscillatorObject.cpp  StringFormat.cpp  StringFormat.h  Volsung.h  VolsungCore.cc  Yggdrasil.cpp  Yggdrasil.h  (+2 more)
src/objects/: AddObject.cpp  AddObject.h  FileoutObject.cpp  FileoutObject.h  FilterObject.cpp  FilterObject.h  MultObject.cpp  MultObject.h  NoiseObject.cpp  NoiseObject.h  OscillatorObject.cpp  OscillatorObject.h  SquareObject.cpp  SquareObject.h  ~add.cpp  ~add.h  ~crush.cpp  ~crush.h  ~delay.cpp  ~delay.h  ~drive.cpp  ~drive.h  ~fileout.cpp  ~fileout.h  ~filter.cpp  ~filter.h  ~mult.cpp  ~mult.h  ~noise.cpp  ~noise.h  ~oscillator.cpp  ~oscillator.h  ~square.cpp  ~square.h
test/: .#program  DevSandbox.cc  TestProgram.cpp  Tests.cc  VolsungProgram.vlsng  Yggdrasil.cpp  program
test/test_programs/: Additive_Synthesis.vlsng  Ambisonics_HRTFs.vlsng  Compressor.vlsng  Convolution.vlsng  Fourier_Transform.vlsng  Frequency_Modulation.vlsng  Granular_Synthesis.vlsng  Karplus_Strong.vlsng  Libraries.vlsng  Modal_Synthesis.vlsng  Random_Melody.vlsng  Reverb.vlsng  Swarm_Generator.vlsng  Tone_Generator.vlsng  Track.vlsng  Vocoder.vlsng
test/test_programs/files/: HRIR_LB_L  HRIR_LB_R  HRIR_LF_L  HRIR_LF_R  HRIR_RB_L  HRIR_RB_R  HRIR_RF_L  HRIR_RF_R  antikythera  drumbeat
